fear: add elements in html, css, sript files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,95 @@
     <title>Virtual Keyboard</title>
   </head>
   <body>
+    <div class="container">
+      <h1 class="title">RSS Virtual Keyboard</h1>
+      <textarea
+        class="textarea output"
+        name=""
+        id=""
+        cols="90"
+        rows="12"
+      ></textarea>
+      <div class="keyboard">
+        <div class="first-row">
+          <button value="1">1</button>
+          <button value="2">2</button>
+          <button value="3">3</button>
+          <button value="4">4</button>
+          <button value="5">5</button>
+          <button value="6">6</button>
+          <button value="7">7</button>
+          <button value="8">8</button>
+          <button value="9">9</button>
+          <button value="0">0</button>
+          <button value="-">-</button>
+          <button value="=">=</button>
+          <button value="backspace">Backspace</button>
+        </div>
+        <div class="second-row">
+          <button value="tab">Tab</button>
+          <button value="q">Q</button>
+          <button value="w">W</button>
+          <button value="e">E</button>
+          <button value="r">R</button>
+          <button value="t">T</button>
+          <button value="y">Y</button>
+          <button value="u">U</button>
+          <button value="i">I</button>
+          <button value="o">O</button>
+          <button value="p">P</button>
+          <button value="[">[</button>
+          <button value="]">]</button>
+          <button value="\">\</button>
+          <button value="del">Del</button>
+        </div>
+        <div class="third-row">
+          <button value="capslock">CapsLock</button>
+          <button value="a">A</button>
+          <button value="s">S</button>
+          <button value="d">D</button>
+          <button value="f">F</button>
+          <button value="g">G</button>
+          <button value="h">H</button>
+          <button value="j">J</button>
+          <button value="k">K</button>
+          <button value="l">L</button>
+          <button value=";">;</button>
+          <button value="'">'</button>
+          <button value="enter">Enter</button>
+        </div>
+        <div class="forth-row">
+          <button value="shift">Shift</button>
+          <button value="z">Z</button>
+          <button value="x">X</button>
+          <button value="c">C</button>
+          <button value="v">V</button>
+          <button value="b">B</button>
+          <button value="n">N</button>
+          <button value="m">M</button>
+          <button value=",">,</button>
+          <button value=".">.</button>
+          <button value="/">/</button>
+          <button value="UP">UP</button>
+          <button value="shift">Shift</button>
+        </div>
+        <div class="fifth-row">
+          <button value="ctrl">Ctrl</button>
+          <button value="win">Win</button>
+          <button value="alt">Alt</button>
+          <button value="space">Space</button>
+          <button value="alt">Alt</button>
+          <button value="left">left</button>
+          <button value="down">down</button>
+          <button value="right">right</button>
+          <button value="ctrl">Ctrl</button>
+        </div>
+      </div>
+      <p>
+        Клавиатура создана в операционной системе Windows <br />
+        Для переключения языка комбинация: левыe ctrl + alt
+      </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
