feat: add new elements and styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         rows="12"
       ></textarea>
       <div class="keyboard">
-        <div class="first-row">
+        <div class="first-row row">
+          <button value="`">`</button>
           <button value="1">1</button>
           <button value="2">2</button>
           <button value="3">3</button>
@@ -31,10 +32,10 @@
           <button value="0">0</button>
           <button value="-">-</button>
           <button value="=">=</button>
-          <button value="backspace">Backspace</button>
+          <button class="backspace" value="backspace">BackSpace</button>
         </div>
-        <div class="second-row">
-          <button value="tab">Tab</button>
+        <div class="second-row row">
+          <button class="tab" value="tab">Tab</button>
           <button value="q">Q</button>
           <button value="w">W</button>
           <button value="e">E</button>
@@ -48,10 +49,10 @@
           <button value="[">[</button>
           <button value="]">]</button>
           <button value="\">\</button>
-          <button value="del">Del</button>
+          <button class="del" value="del">Del</button>
         </div>
-        <div class="third-row">
-          <button value="capslock">CapsLock</button>
+        <div class="third-row row">
+          <button class="capslock" value="capslock">CapsLock</button>
           <button value="a">A</button>
           <button value="s">S</button>
           <button value="d">D</button>
@@ -63,10 +64,10 @@
           <button value="l">L</button>
           <button value=";">;</button>
           <button value="'">'</button>
-          <button value="enter">Enter</button>
+          <button class="enter" value="enter">Enter</button>
         </div>
-        <div class="forth-row">
-          <button value="shift">Shift</button>
+        <div class="forth-row row">
+          <button class="shift" value="shift">Shift</button>
           <button value="z">Z</button>
           <button value="x">X</button>
           <button value="c">C</button>
@@ -78,18 +79,18 @@
           <button value=".">.</button>
           <button value="/">/</button>
           <button value="UP">UP</button>
-          <button value="shift">Shift</button>
+          <button class="shift" value="shift">Shift</button>
         </div>
-        <div class="fifth-row">
-          <button value="ctrl">Ctrl</button>
-          <button value="win">Win</button>
-          <button value="alt">Alt</button>
-          <button value="space">Space</button>
-          <button value="alt">Alt</button>
+        <div class="fifth-row row">
+          <button class="ctrl" value="ctrl">Ctrl</button>
+          <button class="win" value="win">Win</button>
+          <button class="alt" value="alt">Alt</button>
+          <button class="space" value="space">Space</button>
+          <button class="alt" value="alt">Alt</button>
           <button value="left">left</button>
           <button value="down">down</button>
           <button value="right">right</button>
-          <button value="ctrl">Ctrl</button>
+          <button class="ctrl" value="ctrl">Ctrl</button>
         </div>
       </div>
       <p>
