feat: add new elements and styles

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <button value=",">,</button>
           <button value=".">.</button>
           <button value="/">/</button>
-          <button value="UP">UP</button>
+          <button class="arrow" value="▲">▲</button>
           <button class="shift" value="shift">Shift</button>
         </div>
         <div class="fifth-row row">
@@ -87,9 +87,9 @@
           <button class="alt" value="alt">Alt</button>
           <button class="space" value="space">Space</button>
           <button class="alt" value="alt">Alt</button>
-          <button value="left">left</button>
-          <button value="down">down</button>
-          <button value="right">right</button>
+          <button class="arrow" value="◄">◄</button>
+          <button class="arrow" value="▼">▼</button>
+          <button class="arrow" value="►">►</button>
           <button class="ctrl" value="ctrl">Ctrl</button>
         </div>
       </div>
