--- a/index.html
+++ b/index.html
@@ -19,78 +19,78 @@
       ></textarea>
       <div class="keyboard">
         <div class="first-row row">
-          <button value="`">`</button>
-          <button value="1">1</button>
-          <button value="2">2</button>
-          <button value="3">3</button>
-          <button value="4">4</button>
-          <button value="5">5</button>
-          <button value="6">6</button>
-          <button value="7">7</button>
-          <button value="8">8</button>
-          <button value="9">9</button>
-          <button value="0">0</button>
-          <button value="-">-</button>
-          <button value="=">=</button>
-          <button class="backspace" value="backspace">BackSpace</button>
+          <button class="other" value="`">`</button>
+          <button class="other" value="1">1</button>
+          <button class="other" value="2">2</button>
+          <button class="other" value="3">3</button>
+          <button class="other" value="4">4</button>
+          <button class="other" value="5">5</button>
+          <button class="other" value="6">6</button>
+          <button class="other" value="7">7</button>
+          <button class="other" value="8">8</button>
+          <button class="other" value="9">9</button>
+          <button class="other" value="0">0</button>
+          <button class="other" value="-">-</button>
+          <button class="other" value="=">=</button>
+          <button class="backspace">BackSpace</button>
         </div>
         <div class="second-row row">
-          <button class="tab" value="tab">Tab</button>
-          <button value="q">Q</button>
-          <button value="w">W</button>
-          <button value="e">E</button>
-          <button value="r">R</button>
-          <button value="t">T</button>
-          <button value="y">Y</button>
-          <button value="u">U</button>
-          <button value="i">I</button>
-          <button value="o">O</button>
-          <button value="p">P</button>
-          <button value="[">[</button>
-          <button value="]">]</button>
-          <button value="\">\</button>
-          <button class="del" value="del">Del</button>
+          <button class="tab">Tab</button>
+          <button class="other" value="q">q</button>
+          <button class="other" value="w">w</button>
+          <button class="other" value="e">e</button>
+          <button class="other" value="r">r</button>
+          <button class="other" value="t">t</button>
+          <button class="other" value="y">y</button>
+          <button class="other" value="u">u</button>
+          <button class="other" value="i">i</button>
+          <button class="other" value="o">o</button>
+          <button class="other" value="p">p</button>
+          <button class="other" value="[">[</button>
+          <button class="other" value="]">]</button>
+          <button class="other" value="\">\</button>
+          <button class="del other">Del</button>
         </div>
         <div class="third-row row">
-          <button class="capslock" value="capslock">CapsLock</button>
-          <button value="a">A</button>
-          <button value="s">S</button>
-          <button value="d">D</button>
-          <button value="f">F</button>
-          <button value="g">G</button>
-          <button value="h">H</button>
-          <button value="j">J</button>
-          <button value="k">K</button>
-          <button value="l">L</button>
-          <button value=";">;</button>
-          <button value="'">'</button>
+          <button class="capslock">CapsLock</button>
+          <button class="other" value="a">a</button>
+          <button class="other" value="s">s</button>
+          <button class="other" value="d">d</button>
+          <button class="other" value="f">f</button>
+          <button class="other" value="g">g</button>
+          <button class="other" value="h">h</button>
+          <button class="other" value="j">j</button>
+          <button class="other" value="k">k</button>
+          <button class="other" value="l">l</button>
+          <button class="other" value=";">;</button>
+          <button class="other" value="'">'</button>
           <button class="enter" value="enter">Enter</button>
         </div>
         <div class="forth-row row">
-          <button class="shift" value="shift">Shift</button>
-          <button value="z">Z</button>
-          <button value="x">X</button>
-          <button value="c">C</button>
-          <button value="v">V</button>
-          <button value="b">B</button>
-          <button value="n">N</button>
-          <button value="m">M</button>
-          <button value=",">,</button>
-          <button value=".">.</button>
-          <button value="/">/</button>
-          <button class="arrow" value="▲">▲</button>
-          <button class="shift" value="shift">Shift</button>
+          <button class="shift-left shift">Shift</button>
+          <button class="other" value="z">z</button>
+          <button class="other" value="x">x</button>
+          <button class="other" value="c">c</button>
+          <button class="other" value="v">v</button>
+          <button class="other" value="b">b</button>
+          <button class="other" value="n">n</button>
+          <button class="other" value="m">m</button>
+          <button class="other" value=",">,</button>
+          <button class="other" value=".">.</button>
+          <button class="other" value="/">/</button>
+          <button class="arrow arrow-up" value="▲">▲</button>
+          <button class="shift-right shift">Shift</button>
         </div>
         <div class="fifth-row row">
-          <button class="ctrl" value="ctrl">Ctrl</button>
-          <button class="win" value="win">Win</button>
-          <button class="alt" value="alt">Alt</button>
+          <button class="ctrl-left ctrl">Ctrl</button>
+          <button class="win">Win</button>
+          <button class="alt alt-left">Alt</button>
           <button class="space" value="space">Space</button>
-          <button class="alt" value="alt">Alt</button>
-          <button class="arrow" value="◄">◄</button>
-          <button class="arrow" value="▼">▼</button>
-          <button class="arrow" value="►">►</button>
-          <button class="ctrl" value="ctrl">Ctrl</button>
+          <button class="alt-right alt">Alt</button>
+          <button class="arrow arrow-left" value="◄">◄</button>
+          <button class="arrow arrow-down" value="▼">▼</button>
+          <button class="arrow arrow-right" value="►">►</button>
+          <button class="ctrl-right ctrl">Ctrl</button>
         </div>
       </div>
       <p>
