feat: made little rewrite in newJS file.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Virtual Keyboard</title>
   </head>
-  <body>
+  <body class="bodyclass">
     <div class="container">
       <h1 class="title">RSS Virtual Keyboard</h1>
       <textarea
@@ -32,7 +32,7 @@
           <button class="other" value="0">0</button>
           <button class="other" value="-">-</button>
           <button class="other" value="=">=</button>
-          <button class="backspace">BackSpace</button>
+          <button class="backspace backspace">BackSpace</button>
         </div>
         <div class="second-row row">
           <button class="tab">Tab</button>
@@ -49,10 +49,10 @@
           <button class="other" value="[">[</button>
           <button class="other" value="]">]</button>
           <button class="other" value="\">\</button>
-          <button class="del other">Del</button>
+          <button class="del">Del</button>
         </div>
         <div class="third-row row">
-          <button class="capslock">CapsLock</button>
+          <button class="capslock caps">CapsLock</button>
           <button class="other" value="a">a</button>
           <button class="other" value="s">s</button>
           <button class="other" value="d">d</button>
@@ -98,6 +98,6 @@
         Для переключения языка комбинация: левыe ctrl + alt
       </p>
     </div>
-    <script src="script.js"></script>
+    <script src="newJS.js"></script>
   </body>
 </html>
